--- a/FormsAndRazor/WebApp/DBPages/ProductEdit.cshtml
+++ b/FormsAndRazor/WebApp/DBPages/ProductEdit.cshtml
@@ -312,9 +312,10 @@ else //for IsPost
             </div>
             <div class="row">
                 <button type="submit" name="theButton" id="theUpdate" class="btn btn-primary" value="update">Update</button>&nbsp;&nbsp;&nbsp;
-                <button type="submit" name="theButton" id="theDelete" class="btn btn-primary" value="delete" formnovalidate>Delete</button>&nbsp;&nbsp;&nbsp;
-                <button type="submit" name="theButton" id="theCancel" class="btn btn-primary" value="cancel" formnovalidate>Cancel</button>
-             </div>
+                <button type="submit" name="theButton" id="theDelete" class="btn" value="delete" formnovalidate>Delete</button>&nbsp;&nbsp;&nbsp;
+                <button type="submit" name="theButton" id="theCancel" class="btn" value="cancel" formnovalidate>Reset</button>&nbsp;&nbsp;&nbsp;
+                <button type="submit" name="theButton" id="theCancel" class="btn" value="cancel" formnovalidate>Cancel</button>
+            </div>
             @* this javascript will allow for a confirmation dialog to appear
             when a particular button is pressed (theDelete) *@
             <script type="text/javascript">
