--- a/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumSearch.cshtml
+++ b/RazorSolution/ACentenoWebApp/ExercisePages/Exercise04_AlbumSearch.cshtml
@@ -30,7 +30,7 @@
             {
                 if (albumsearch.IsEmpty())
                 {
-                    <p><strong><span style="color:firebrick">Enter a product name (or partial name).</span></strong></p>
+                    <p><strong><span style="color:firebrick">Enter an album name (or partial name).</span></strong></p>
                 }
                 else
                 {
