Exercise 6 basic fxns working

--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/Site.Master
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/Site.Master
@@ -88,6 +88,10 @@
                                         href="~/ExercisePages/ExerciseHome.aspx"
                                         style="color:black" runat="server">
                                    Exercise Home</a>
+                                <a class="dropdown-item"
+                                        href="~/ExercisePages/MultipleRecordQuery.aspx"
+                                        style="color:black" runat="server">
+                                   Multiple Record Query</a>
                             </div>
                          </li>
                          <li class="nav-item">
