--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/Site.Master
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/Site.Master
@@ -14,7 +14,16 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+    <style>
+        table caption {
+            caption-side: top;
+            text-align:center;
+            color: #000;
+            background-color:lightcyan;
+            font-size: 24px;
+            padding: 10px;
+           }
+    </style>
 </head>
 <body>
     <form runat="server">
